# ebook-tts

./: .gitignore  Dockerfile  Dockerfile.api  LICENSE  README.md  fly.toml  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: ci.yml
docker/: entrypoint.sh
examples/: base_en.yaml  tell_tale_heart.yaml
src/ebook_tts/: __init__.py  audio_synthesizer.py  audio_writer.py  chapter_detector.py  checkpoint.py  cli.py  converter.py  epub_extractor.py  pdf_extractor.py  progress.py  pronunciation_dict.py  text_chunker.py  text_preprocessor.py  utils.py
src/ebook_tts/api/: __init__.py  config.py  dependencies.py  main.py
src/ebook_tts/api/db/: __init__.py  database.py  models.py
src/ebook_tts/api/models/: job.py  user.py  voice.py
src/ebook_tts/api/routers/: auth.py  convert.py  preview.py  voices.py
src/ebook_tts/api/services/: auth_service.py  job_service.py  storage_service.py  worker_service.py
tests/: conftest.py  test_audio_writer.py  test_checkpoint.py  test_cli.py  test_converter.py  test_epub_extractor.py  test_preprocessor.py  test_pronunciation_dict.py  test_utils.py
