[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebook_tts"]

[project]
name = "ebook-tts"
version = "1.0.0"
description = "Convert PDF ebooks to audiobooks using Kokoro TTS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "v0xg" }
]
keywords = [
    "ebook-tts",
    "audiobook",
    "pdf",
    "text-to-speech",
    "tts",
    "kokoro",
    "ebook",
    "accessibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "PyMuPDF>=1.23.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "nltk>=3.8",
    "numpy>=1.24,<2",
    "scipy>=1.10",
    "soundfile>=0.12",
    "langdetect>=1.0.9",
    "kokoro>=0.9.2",
    "torch>=2.0",
    "torchaudio>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "sqlalchemy>=2.0",
    "boto3>=1.34.0",
    "pydantic-settings>=2.1.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
ebook-tts = "ebook_tts.cli:cli"

[project.urls]
Homepage = "https://github.com/v0xg/ebook-tts"
Documentation = "https://github.com/v0xg/ebook-tts#readme"
Repository = "https://github.com/v0xg/ebook-tts"
Issues = "https://github.com/v0xg/ebook-tts/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (required for FastAPI Depends)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
